log/build_2023-03-29_00-28-04/project3/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/msappington11/ros2_ws/csce452-project3/install/project3/lib/python3.10/site-packages/project3/track.py", line 74
    if np.any(row[:,:] == np.nan)
                                 ^
SyntaxError: expected ':'

